# palo-alto-budget-app

./: .gitignore  DOCUMENTATION.md  ML_ARCHITECTURE.md  README.md  TODO.md  case-study.md  outline.md  plaid_sandbox_credentials.md  test_frontend_income.py  test_income_streams.py  test_nan_fixes.py  test_new_income_endpoint.py  test_transaction_logic.py
backend/: .env.example  Dockerfile  README.md  ai_insights.py  auth.py  database.db  docker-build-run.sh  init.sql  main.py  plaid_client.py  pyproject.toml  requirements.txt  schemas.py  security.py  test_api.py  test_category_integration.py  test_category_parsing.py  test_comprehensive.py  test_plaid_direct.py
backend/data/: data_models.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BankAccounts.tsx  CategoryChart.tsx  DashboardStats.tsx  GoalsSummary.tsx  IncomeStreams.tsx  InsightCard.tsx  InsightsSummary.tsx  Layout.tsx  NetIncomeChart.tsx  PlaidLink.tsx  ProtectedRoute.tsx  SpendingChart.tsx  SubscriptionSummary.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Dashboard.tsx  Goals.tsx  Home.tsx  Insights.tsx  Login.tsx  Register.tsx  Settings.tsx  Subscriptions.tsx  Transactions.tsx
frontend/src/types/: insight.ts  transaction.ts
frontend/src/utils/: categoryUtils.ts
