[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "jwt>=1.4.0",
    "pandas>=2.3.2",
    "passlib>=1.7.4",
    "scikit-learn>=1.7.1",
    "sqlmodel>=0.0.24",
]
