[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "cryptography>=45.0.7",
    "fastapi[standard]>=0.116.1",
    "pandas>=2.3.2",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "sqlmodel>=0.0.24",
]
